         Windows (patch #3591613) (Sergio).
20121208 man/fuse.1: Update man page for movie, stereo separation and statusbar
         options. Remove reference to fixed issue in joystick dialog on GTK+ UI
         (Sergio).
20121208 man/fuse.1: document support for reading PZX files (Sergio).
20121210 man/fuse.1: fix a couple of typos (Fred).
20121222 hacking/spectranet.txt: add reference to precompiled installers (Fred).
20121222 man/fuse.1: add information on SpecDrum settings and Spectranet
         (bug #3495082) (Fred).
20121222 configure.ac: link explicitly against the math library. This is
         necessary for the binutils gold linker (patch #3596551) (Alberto
         Garcia).
20121225 snapshot.c: support setting late timings from snapshots (Fred).
20121227 man/fuse.1: update descriptions for SpeccyBoot interface and
         confirm-actions option. Fix dashes (Sergio).
20121227 configure.ac: bump version number to 1.1.0 (Fred).
20121227 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121227 man/fuse.1: fix spelling, capitalisation, dashes, quotes and
         whitespace (Stuart).
20121228 man/fuse.1: fix whitespace and grammar issues (Stuart).
20121228 man/fuse.1: make better use of named glyphs (Stuart).
20121228 man/fuse.1: remove trailing spaces (Stuart).
20121228 compat/unix/socket.c,tape.c,unittests.c: fix warnings.
20121228 man/fuse.1: whitespace and italics fixes (Stuart).
20121228 man/fuse.1: add missing 'SpecDrum volume' section (Stuart).
20121228 man/fuse.1: restore spacing between synopsis and description and
         use default paragraph spacing for the entire man page (Stuart).
20121228 man/fuse.1: use 'tbl' syntax for example of Spectranet current
         configuration screen (Stuart).
20121229 unittests/unittests.c: make unit tests pass for 16K and Timex
         machines.
20121229 man/fuse.1: whitespace and punctuation fixes (Stuart).
20121230 man/fuse.1: use bold font for command line option names (Stuart).